Nice fluid rangedemo ui

--- a/rangedemo/drag.html
+++ b/rangedemo/drag.html
@@ -18,7 +18,7 @@
         }
         .drag {
             position: absolute;
-            border: 1px solid #89B;
+            border: 1px solid #AAB;
             background: #BCE;
             height: 100%;
             width: 58px;
@@ -30,7 +30,7 @@
             position: absolute;
             height: 6px;
             width: 6px;
-            border: 1px solid #89B;
+            border: 1px solid #AAB;
             background: #9AC;
         }
         .EE {
