Moved parser into flareplot-main.js. Linted a bunch.

--- a/embedding/minimum.html
+++ b/embedding/minimum.html
@@ -4,17 +4,15 @@
   <script src="https://d3js.org/d3.v3.min.js"></script>
 
   <!-- FlarePlot javascript files -->
-  <!-- <script src="http://cdn.rawgit.com/GPCRviz/FlarePlot/master/flareplot-parser.js"></script> -->
-  <!-- <script src="http://cdn.rawgit.com/GPCRviz/FlarePlot/master/flareplot-main.js"></script> -->
-  <script src="../docs/js/flareplot-parser.js"></script>
-  <script src="../docs/js/flareplot-main.js"></script>
+  <script src="http://cdn.rawgit.com/GPCRviz/FlarePlot/master/flareplot-main.js"></script>
 
   <!-- FlarePlot css files -->
-  <!-- <script src="http://cdn.rawgit.com/GPCRviz/FlarePlot/master/flareplot-main.css"></script> -->
-  <!--<link href="../docs/css/flare.css" rel="stylesheet">-->
+  <script src="http://cdn.rawgit.com/GPCRviz/FlarePlot/master/flareplot-main.css"></script>
 </head>
 <body>
+
 <div id="flare-container"></div>
+
 <script>
     var jsonData = {
         edges: [
