You can manually set the range of the slider. Just need the ui to set the range now

--- a/rangedemo/drag.html
+++ b/rangedemo/drag.html
@@ -29,7 +29,7 @@
 <div id="slider-container"></div>
 
 <script type="text/javascript">
-    createJQDRangeslider(0, 100, "#slider-container")
+    var slider = createJQDRangeslider(0, 100, "#slider-container")
 </script>
 </body>
 </html>
