Fixed up some things and published in its own repo

--- a/rangedemo/drag.html
+++ b/rangedemo/drag.html
@@ -30,6 +30,9 @@
 
 <script type="text/javascript">
     var slider = createJQDRangeslider(0, 100, "#slider-container")
+    slider.onChange(function(newRange){
+        //console.log(newRange);
+    })
 </script>
 </body>
 </html>
